--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 </head>
 <body>
+  <h1>H1 Tag</h1>
   <div id="app"></div>
 </body>
 </html>
